--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-mongodb": "^1.0.3",
+    "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-query-devtools": "^5.35.1",
+    "arctic": "^1.8.1",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "capitalize": "^2.0.4",
+    "class-variance-authority": "^0.7.0",
+    "lucia": "^3.2.0",
+    "lucide-react": "^0.376.0",
+    "moment": "^2.30.1",
+    "mongoose": "^8.3.3",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.0",
+    "server-only": "^0.0.1",
+    "sharp": "^0.33.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/capitalize": "^2.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.11.9",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
